--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-   <head>
+	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,25 +12,19 @@
 			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 			<link rel="stylesheet" href="{{ asset('css/bflix.css')}}">
 		{% endblock %}
+	</head>
 
-    </head>
-    <body>
-     {% include "partials/_nav.html.twig" %}
-     
-        {% block body %}
-       
-        {% endblock %}
 
-        {% block footer %}
-			<footer class="text-muted text-center py-5">
-				<div class="container">
-					<p class="mb-1">2021 &copy; O'flix. Tous droits réservés</p>
-				</div>
-			</footer>
-		{% endblock %}
+	<body>
+		{% include "partials/_nav.html.twig" %}
 
-		{% block javascripts %}
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-		{% endblock %}
-    </body>
-</html>
+		<main class="container"> {% block body %}{% endblock %}
+			</main>
+
+			{% include "partials/_footer.html.twig" %}
+
+			{% block javascripts %}
+				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+			{% endblock %}
+		</body>
+	</html>
