--- a/templates/partials/_search.html.twig
+++ b/templates/partials/_search.html.twig
@@ -2,11 +2,10 @@
 	<section class="py-5 text-center container">
 		<div class="row py-lg-5">
 			<div class="col-lg-6 col-md-8 mx-auto">
-				<h1 class="fw-light">Dernières séries</h1>
+				<h1 class="fw-light">sériesTrvoue en focntion de votre recherche
+				</h1>
 			</div>
 		</div>
-
-
 	</section>
 
 
@@ -17,5 +16,4 @@
 					{{tvshow.title}}</a>
 			</li>
 		{% endfor %}
-
 	</ul>
