feats : command / slugger {mise en place d'une commande tvshow:slugger pour slugger toutes les séries}

--- a/templates/partials/_search.html.twig
+++ b/templates/partials/_search.html.twig
@@ -2,7 +2,7 @@
 	<section class="py-5 text-center container">
 		<div class="row py-lg-5">
 			<div class="col-lg-6 col-md-8 mx-auto">
-				<h1 class="fw-light">sériesTrvoue en focntion de votre recherche
+				<h1 class="fw-light">Séries
 				</h1>
 			</div>
 		</div>
