--- a/templates/tvshow/list.html.twig
+++ b/templates/tvshow/list.html.twig
@@ -1,20 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Serie{% endblock %}
+{% block title %}Serie
+{% endblock %}
 
 {% block body %}
 
- 
-            <ul>
-  {% for tvshowList in tvshows %}
-            <li>
-              {{tvshowList.title}}
-            </li>
-
-
- {% endfor %}
-
-            </ul>
-
+	{% include "partials/_search.html.twig" %}
 
 {% endblock %}
