--- a/templates/tvshow/details.html.twig
+++ b/templates/tvshow/details.html.twig
@@ -27,7 +27,7 @@
 					<br>
 					Categories :
 					<em class="text-danger">
-						{% for category in tvshow.categories %}
+						{% for category in tvshow.catgoriess %}
 							{{ category.name}}
 						{% endfor %}
 					</em>
