--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -23,11 +23,40 @@
 						<a class="nav-link" href="#">Ma liste</a>
 					</li>
 				</ul>
+
 				<ul class="navbar-nav me-4 mb-md-0">
-					<li class="nav-item">
-						<a class="btn btn-danger" aria-current="page" href="login.html">Se connecter</a>
+
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
+						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+							<li>
+								<a class="dropdown-item" href="#">Série</a>
+							</li>
+							<li>
+								<a class="dropdown-item" href="#">Categories</a>
+							</li>
+							<li>
+								<a class="dropdown-item" href="#">Personnages</a>
+							</li>
+							<li>
+								<a class="dropdown-item" href="#">Users</a>
+							</li>
+							<li><hr class="dropdown-divider"></li>
+
+							<li>
+								<a class="dropdown-item" href="#">Déconnexion</a>
+							</li>
+
+						</ul>
 					</li>
+
+					<li class="nav-item">
+						<a class="btn btn-danger" aria-current="page" href="#">Se connecter</a>
+					</li>
+
 				</ul>
+
 
 				<form class="d-flex m" action="{{ path('search') }}">
 					<input class="form-control me-2" name="q" type="search" placeholder="Ex : The mandalorian" aria-label="Search">
