--- a/templates/admin/tvshow/add.html.twig
+++ b/templates/admin/tvshow/add.html.twig
@@ -1,4 +1,5 @@
 {% extends 'admin/layout.html.twig' %}
 
 {% block content %}
-	{{form(formView)}}{% endblock %}
+	{{ form(formView, {'attr': {'novalidate': 'novalidate'}}) }}
+	{% endblock %}
