feats : template/partials {add message falsh}

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,7 @@
 
 	<body>
 		{% include "partials/_nav.html.twig" %}
+		{% include "partials/_flash.html.twig" %}
 
 		<main class="container"> {% block body %}{% endblock %}
 			</main>
