feat : TvshowController {add => Méthode delete}

--- a/templates/admin/tvshow/show.html.twig
+++ b/templates/admin/tvshow/show.html.twig
@@ -40,7 +40,7 @@
 				<a href="#" class="py-2">
 					<button type="button" class="btn btn-outline-primary btn-sm">Editer</button>
 				</a>
-				<a href="#" class="py-2">
+				<a href="{{ path('admin_tvshow_delete', {id:tvshow.id} ) }}" class="py-2">
 					<button type="button" class="btn btn-outline-danger btn-sm">Supprimer</button>
 				</a>
 			</div>
