feats: TvshowController {add Methode edit}

--- a/templates/admin/layout.html.twig
+++ b/templates/admin/layout.html.twig
@@ -16,7 +16,7 @@
 
 				</div>
 			</aside>
-			<main class="col-10">
+			<main class="col-10 p-5 ">
 
 				{% block content %}{% endblock %}
 			</main>
