--- a/templates/admin/tvshow/show.html.twig
+++ b/templates/admin/tvshow/show.html.twig
@@ -37,7 +37,7 @@
 				<a href="{{ path('admin_tvshow_list')}}" class="py-2">
 					<button type="button" class="btn btn-outline-success btn-sm ">Retour a la liste des series</button>
 				</a>
-				<a href="#" class="py-2">
+				<a href="{{ path('admin_tvshow_edit', {id:tvshow.id}) }}" class="py-2">
 					<button type="button" class="btn btn-outline-primary btn-sm">Editer</button>
 				</a>
 				<a href="{{ path('admin_tvshow_delete', {id:tvshow.id} ) }}" class="py-2">
