style: Template {characters=>show}

--- a/templates/admin/characters/list.html.twig
+++ b/templates/admin/characters/list.html.twig
@@ -24,7 +24,7 @@
 				{% endfor %}
 			</ul>
 		</div>
-		<a href="#">
+		<a href="{{ path('admin_characters_add') }}">
 			<button type="button" class="btn btn-outline-success btn-sm">Nouveau Personnage</button>
 		</a>
 	</div>
