--- a/templates/admin/characters/show.html.twig
+++ b/templates/admin/characters/show.html.twig
@@ -24,7 +24,7 @@
 		</div>
 		<div class="container">
 			<p>
-				<a href="{{ path('admin_characters_list') }}">Retour à l'accueil</a>
+				<a href="{{ path('admin_characters_list') }}">Retour à la list de personnages</a>
 			</p>
 		</div>
 	</div>
