--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -6,7 +6,7 @@
 					<path d="M6 10.117V5.883a.5.5 0 0 1 .757-.429l3.528 2.117a.5.5 0 0 1 0 .858l-3.528 2.117a.5.5 0 0 1-.757-.43z"/>
 					<path d="M4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4zm0 1h8a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1z"/>
 				</svg>
-				<strong>O'flix</strong>
+				<strong>B'flix</strong>
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -23,13 +23,10 @@
 						<a class="nav-link" href="#">Ma liste</a>
 					</li>
 				</ul>
-
 				<ul class="navbar-nav me-4 mb-md-0">
-
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-
 							<li>
 								<a class="dropdown-item" href="#">Série</a>
 							</li>
@@ -43,21 +40,15 @@
 								<a class="dropdown-item" href="#">Users</a>
 							</li>
 							<li><hr class="dropdown-divider"></li>
-
 							<li>
 								<a class="dropdown-item" href="#">Déconnexion</a>
 							</li>
-
 						</ul>
 					</li>
-
 					<li class="nav-item">
 						<a class="btn btn-danger" aria-current="page" href="#">Se connecter</a>
 					</li>
-
 				</ul>
-
-
 				<form class="d-flex m" action="{{ path('search') }}">
 					<input class="form-control me-2" name="q" type="search" placeholder="Ex : The mandalorian" aria-label="Search">
 					<button class="btn btn-outline-secondary" type="submit">GO</button>
@@ -65,4 +56,4 @@
 			</div>
 		</div>
 	</nav>
-</header></header>
+</header>
