feat : admin\Controller {add : Methode delete => CharactersController}

--- a/templates/admin/characters/show.html.twig
+++ b/templates/admin/characters/show.html.twig
@@ -8,7 +8,7 @@
 				<p>
 					<a href="{{ path('admin_characters_edit', {id:character.id}) }}">Editer</a>
 					|
-					<a href="#">Supprimer</a>
+					<a href="{{ path('admin_characters_delete', {id:character.id}) }}">Supprimer</a>
 
 
 				</p>
