--- a/templates/admin/user/list.html.twig
+++ b/templates/admin/user/list.html.twig
@@ -36,6 +36,8 @@
 			{% endfor %}
 		</tbody>
 	</table>
-
+	<a href="{{ path('admin_user_add') }}">
+		<button type="button" class="btn btn-outline-secondary btn-sm">Nouvel Utilisateurs</button>
+	</a>
 
 {% endblock %}
