--- a/templates/admin/user/show.html.twig
+++ b/templates/admin/user/show.html.twig
@@ -35,7 +35,15 @@
 		</tbody>
 	</table>
 
-	<a href="{{ path('admin_user_list') }}">back to list</a>
+	<div class="row">
+		<div class="col-auto me-auto">
+			<a href="{{ path('admin_user_list') }}">
+				<button type="button" class="btn btn-outline-secondary btn-sm">Retour à la list Utilisateurs</button>
+			</a>
+		</div>
 
-
+		<div class="col-auto">
+			{{ include('admin/user/_delete_form.html.twig') }}
+		</div>
+	</div>
 {% endblock %}
