--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -24,30 +24,38 @@
 					</li>
 				</ul>
 				<ul class="navbar-nav me-4 mb-md-0">
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
-						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<li>
-								<a class="dropdown-item" href="#">Série</a>
-							</li>
-							<li>
-								<a class="dropdown-item" href="#">Categories</a>
-							</li>
-							<li>
-								<a class="dropdown-item" href="#">Personnages</a>
-							</li>
-							<li>
-								<a class="dropdown-item" href="#">Users</a>
-							</li>
-							<li><hr class="dropdown-divider"></li>
-							<li>
-								<a class="dropdown-item" href="#">Déconnexion</a>
-							</li>
-						</ul>
-					</li>
-					<li class="nav-item">
-						<a class="btn btn-danger" aria-current="page" href="#">Se connecter</a>
-					</li>
+					{% if app.user %}
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								{{app.user.firstname}}
+							</a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+								{% if is_granted('ROLE_ADMIN') %}
+									<li>
+										<a class="dropdown-item" href="{{ path('admin_tvshow_list') }}">Série</a>
+									</li>
+									<li>
+										<a class="dropdown-item" href="{{ path('admin_category_list') }}">Categories</a>
+									</li>
+									<li>
+										<a class="dropdown-item" href="{{ path('admin_character_list') }}">Personnages</a>
+									</li>
+									<li>
+										<a class="dropdown-item" href="{{ path('admin_user_list') }}">Users</a>
+									</li>
+									<li><hr class="dropdown-divider"></li>
+								{% endif %}
+								<li>
+									<a class="dropdown-item" href="{{path('app_logout')}}">Déconnexion</a>
+								</li>
+
+							</ul>
+						</li>
+					{% else %}
+						<li class="nav-item">
+							<a class="btn btn-danger" aria-current="page" href="{{ path('app_login')}}">Se connecter</a>
+						</li>
+					{% endif %}
 				</ul>
 				<form class="d-flex m" action="{{ path('search') }}">
 					<input class="form-control me-2" name="q" type="search" placeholder="Ex : The mandalorian" aria-label="Search">
