feat : mise en place de l'authentification avec définition des roles

--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -35,10 +35,10 @@
 										<a class="dropdown-item" href="{{ path('admin_tvshow_list') }}">Série</a>
 									</li>
 									<li>
-										<a class="dropdown-item" href="{{ path('admin_category_list') }}">Categories</a>
+										<a class="dropdown-item" href="#">Categories</a>
 									</li>
 									<li>
-										<a class="dropdown-item" href="{{ path('admin_character_list') }}">Personnages</a>
+										<a class="dropdown-item" href="{{ path('admin_characters_list') }}">Personnages</a>
 									</li>
 									<li>
 										<a class="dropdown-item" href="{{ path('admin_user_list') }}">Users</a>
