--- a/templates/admin/user/show.html.twig
+++ b/templates/admin/user/show.html.twig
@@ -41,6 +41,11 @@
 				<button type="button" class="btn btn-outline-secondary btn-sm">Retour à la list Utilisateurs</button>
 			</a>
 		</div>
+		<div class="col-auto">
+			<a href="{{ path('admin_user_edit', {id:user.id}) }}">
+				<button type="button" class="btn btn-outline-secondary btn-sm">Update</button>
+			</a>
+		</div>
 
 		<div class="col-auto">
 			{{ include('admin/user/_delete_form.html.twig') }}
