--- a/templates/admin/user/list.html.twig
+++ b/templates/admin/user/list.html.twig
@@ -3,8 +3,7 @@
 {% block title %}list Utilisateur
 {% endblock %}
 
-{% block body %}
-
+{% block content %}
 	<h1>List des utilisateurs</h1>
 
 	<table class="table">
@@ -28,8 +27,8 @@
 					<td>{{ user.firstname }}</td>
 					<td>{{ user.lastname }}</td>
 					<td>
-						<a href="{{ path('admin_user_edit', {id:user.id}) }}">
-							<button type="button" class="btn btn-outline-info btn-sm">Update</button>
+						<a href="{{ path('admin_user_show', {id:user.id}) }}">
+							<button type="button" class="btn btn-outline-info btn-sm">Info</button>
 						</a>
 					</td>
 
