feat: controller/Category { liste des catégories }

--- a/templates/admin/layout.html.twig
+++ b/templates/admin/layout.html.twig
@@ -11,8 +11,8 @@
 				<div class="list-group">
 					<a href="#" class="list-group-item list-group-item-action active" aria-current="true">Accueil</a>
 					<a href="{{ path('admin_tvshow_list') }}" class="list-group-item list-group-item-action">Séries</a>
-					<a href="#" class="list-group-item list-group-item-action">Categories</a>
-					<a href="#" class="list-group-item list-group-item-action">Personnages</a>
+					<a href="{{ path('admin_category_list') }} " class="list-group-item list-group-item-action">Categories</a>
+					<a href="{{ path('admin_characters_list') }}" class="list-group-item list-group-item-action">Personnages</a>
 
 				</div>
 			</aside>
