--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -45,7 +45,7 @@
 										<a class="dropdown-item" href="{{ path('admin_tvshow_list') }}">Série</a>
 									</li>
 									<li>
-										<a class="dropdown-item" href="#">Categories</a>
+										<a class="dropdown-item" href="{{ path('admin_category_list') }} ">Categories</a>
 									</li>
 									<li>
 										<a class="dropdown-item" href="{{ path('admin_characters_list') }}">Personnages</a>
