--- a/templates/admin/category/list.html.twig
+++ b/templates/admin/category/list.html.twig
@@ -20,7 +20,8 @@
 				{% endfor %}
 			</ul>
 		</div>
-		<a href="#">
+
+		<a href="{{ path('admin_category_add')}}">
 			<button type="button" class="btn btn-outline-success btn-sm">Nouvelle Categories</button>
 		</a>
 	</div>
