style : Views {template login }

--- a/templates/tvshow/details.html.twig
+++ b/templates/tvshow/details.html.twig
@@ -27,11 +27,7 @@
 					{% endfor %}
 					<br>
 					Categories :
-					<em
-						class="text-danger">
-						<!--	{% for category in tvshow.catgoriess %}
-																										{{ category.name}}
-																									{% endfor %}>-->
+					<em class="text-danger">
 						{{Omdb.Genre}}
 
 					</em>
