feat : Command:Poster {création d'une commande de mise à jour de toutes les affiches}

--- a/templates/admin/tvshow/show.html.twig
+++ b/templates/admin/tvshow/show.html.twig
@@ -11,7 +11,7 @@
 		<div class="row py-lg-5">
 			<div class="col-lg-6 col-md-8 mx-auto">
 				<h1 class="fw-light">{{tvshow.title}}</h1>
-				<img src="" alt="" height="400">
+				<img src="{{tvshow.poster}}" alt="" height="400">
 				<p class="lead text-muted">
 					<a href="#">
 						{% for season in tvshow.seasons %}
