--- a/templates/tvshow/details.html.twig
+++ b/templates/tvshow/details.html.twig
@@ -11,7 +11,7 @@
 			<div class="col-lg-6 col-md-8 mx-auto">
 				<h1 class="fw-light">{{tvshow.title}}</h1>
 				<!--	<img src="#" alt="" height="400">-->
-				<img src="{{Omdb.Poster}}" alt="" height="400">
+				<img src="{{tvshow.poster}}" alt="" height="400">
 				<p class="lead text-muted">
 					<a href="#">
 						{% for season in tvshow.seasons %}
@@ -28,8 +28,9 @@
 					<br>
 					Categories :
 					<em class="text-danger">
-						{{Omdb.Genre}}
-
+						{% for category in tvshow.catgoriess %}
+							{{ category.name}}
+						{% endfor %}
 					</em>
 				</p>
 			</div>
