--- a/templates/partials/_search.html.twig
+++ b/templates/partials/_search.html.twig
@@ -1,46 +1,24 @@
-<ul>
-	<section class="py-5 text-center container">
-		<div class="row py-lg-5">
-			<div class="col-lg-6 col-md-8 mx-auto">
-				<h1 class="fw-light">Séries
-				</h1>
-			</div>
+<section class="py-5 text-center container ">
+	<div class="row py-lg-5  bg-dark rounded shadow-lg">
+		<div class="col-lg-6 col-md-8 mx-auto">
+			<h1 class="fw-light text-light">Séries
+			</h1>
 		</div>
-	</section>
+	</div>
+</section>
 
-	<section class="continer w-75 m-auto">
-
-
-		<ol class="list-group list-group-numbered  ">
+<div class="py-5 bg-dark rounded shadow-lg">
+	<div class="container">
+		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-6 g-3">
 			{% for tvshow in tvshows %}
-				<li class="d-flex justify-content-between align-items-start text-danger bg-light bg-gradient p-2 m-2">
-					<div class="ms-2 me-auto">
-						<div class="fw-bold ">
-							<a href="{{ path('tvshow_details', {id:tvshow.id}) }}" class="text-success">
-								{{tvshow.title}}</a>
-
+				<div class="col">
+					<a href="{{ path('tvshow_details', {id:tvshow.id}) }}">
+						<div class="card " style="width: 10rem;">
+							<img src={{tvshow.poster}} class="card-img-top rounded " alt="image">
 						</div>
-						<p class="text-dark">
-							categorie :
-							{% for  ben in tvshow.catgoriess %}
-								<em class="badge rounded-pill bg-secondary mx-1">{{ ben.name}}</em>
-							{% endfor %}
-						</p>
-						<p class="text-dark">
-							Personnages :
-							{% for  benux in tvshow.characters %}
-								<em class="badge rounded-pill bg-secondary mx-1">{{ benux.firstname }}__{{ benux.lastname}}
-								</em>
-							{% endfor %}
-						</p>
-					</div>
-
-					<span class="badge bg-primary rounded-pill m-2">
-						Likes :
-						{{tvshow.nbLikes}}</span>
-				</li>
+					</a>
+				</div>
 			{% endfor %}
-		</ol>
-
-
-	</section>
+		</div>
+	</div>
+</div>
