--- a/templates/admin/user/edit.html.twig
+++ b/templates/admin/user/edit.html.twig
@@ -12,7 +12,7 @@
 	<div class="row">
 		<div class="col-auto me-auto">
 			<a href="{{ path('admin_user_list') }}">
-				<button type="button" class="btn btn-outline-secondary btn-sm">Retour à la list Utilisateurs</button>
+				<button type="button" class="btn btn-outline-secondary btn-sm">Retour à la liste Utilisateurs</button>
 			</a>
 		</div>
 
