--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -58,7 +58,9 @@
 								<li>
 									<a class="dropdown-item" href="{{path('app_logout')}}">Déconnexion</a>
 								</li>
-
+								<li>
+									<a class="dropdown-item" href="{{ path('account_user', {id:app.user.id} )}}">Mon Compte</a>
+								</li>
 							</ul>
 						</li>
 					{% else %}
