feats: UserType {affichages de la modification des Roles en fonction du Role Utilisateur}

--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -5,11 +5,11 @@
 
 {% block body %}
 	<h1>Mon Compte</h1>
-	{{ form_start(form,{'attr': {'novalidate': 'novalidate'}}) }}
+	{{ form_start(form) }}
 	{{ form_row(form.email) }}
 	{{ form_row(form.firstname) }}
 	{{ form_row(form.lastname) }}
-	{{ form_row(form.password) }}
+
 	{{ form_row(form.save) }}
 	{{ form_end(form) }}
 
