--- a/templates/admin/user/add.html.twig
+++ b/templates/admin/user/add.html.twig
@@ -9,6 +9,6 @@
 	{{ include('admin/user/_form.html.twig') }}
 
 	<a href="{{ path('admin_user_list') }}">
-		<button type="button" class="btn btn-outline-secondary btn-sm">Retour à la list Utilisateurs</button>
+		<button type="button" class="btn btn-outline-secondary btn-sm">Retour à la liste Utilisateurs</button>
 	</a>
 {% endblock %}
