--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -5,13 +5,15 @@
 
 {% block body %}
 	<h1>Mon Compte</h1>
-	{{ form_start(form) }}
-	{{ form_row(form.email) }}
-	{{ form_row(form.firstname) }}
-	{{ form_row(form.lastname) }}
-
-	{{ form_row(form.save) }}
-	{{ form_end(form) }}
-
-
+	<pre>
+	{{ dump(app.user.roles) }}
+</pre>
+	{{ form_widget(formAccount) }}
+	{# {{ form_start(formAccount) }}
+		{{ form_row(formAccount.email) }}
+		{{ form_row(formAccount.firstname) }}
+		{{ form_row(formAccount.lastname) }}
+	
+		{{ form_row(formAccount.save) }}
+		{{ form_end(formAccount) }} #}
 {% endblock %}
