refactor: UserType & Template Account

--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -8,12 +8,15 @@
 	<pre>
 	{{ dump(app.user.roles) }}
 </pre>
-	{{ form_widget(formAccount) }}
-	{# {{ form_start(formAccount) }}
-		{{ form_row(formAccount.email) }}
-		{{ form_row(formAccount.firstname) }}
-		{{ form_row(formAccount.lastname) }}
-	
-		{{ form_row(formAccount.save) }}
-		{{ form_end(formAccount) }} #}
+
+	{{ form_start(formAccount) }}
+	{{ form_row(formAccount.email) }}
+	{{ form_row(formAccount.firstname) }}
+	{{ form_row(formAccount.lastname) }}
+	{% if app.user.roles[0] != "ROLE_USER" %}
+		{{ form_row(formAccount.roles) }}
+	{% endif %}
+
+	{{ form_row(formAccount.save) }}
+	{{ form_end(formAccount) }}
 {% endblock %}
