Style: Templates: base & partial _nav {dynamisation de la classe nav-link en fonction de la page ative}

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,9 @@
 
 
 	<body>
+
+		{% set currentPage = app.request.get('_route') %}
+
 		{% include "partials/_nav.html.twig" %}
 		{% include "partials/_flash.html.twig" %}
 
