--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -13,18 +13,16 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarCollapse">
 				<ul class="navbar-nav me-auto mb-2 mb-md-0">
-
-
 					{% if app.user %}
 						{% if is_granted('ROLE_USER') %}
 							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="{{ path('home')}}">Accueil</a>
+								<a class="nav-link {{ currentPage =='home' ? 'active' }}" aria-current="page" href="{{ path('home')}}">Accueil</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="{{ path('tvshow_list')}}">Séries</a>
+								<a class="nav-link {{ currentPage =='tvshow_list' ? 'active' }}" href="{{ path('tvshow_list')}}">Séries</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Ma liste</a>
+								<a class="nav-link {{ currentPage =='account_user' ? 'active' }}" href="{{ path('account_user', {id:app.user.id} )}}">Mon Compte</a>
 							</li>
 						{% endif %}
 					{% else %}
@@ -43,16 +41,14 @@
 								{% if is_granted('ROLE_ADMIN') %}
 
 									<li>
-										<a class="dropdown-item" href="{{ path('admin_user_list') }}">Users</a>
+										<a class="dropdown-item" href="{{ path('admin_user_list') }}">Dashboard</a>
 									</li>
 									<li><hr class="dropdown-divider"></li>
 								{% endif %}
 								<li>
 									<a class="dropdown-item" href="{{path('app_logout')}}">Déconnexion</a>
 								</li>
-								<li>
-									<a class="dropdown-item" href="{{ path('account_user', {id:app.user.id} )}}">Mon Compte</a>
-								</li>
+
 							</ul>
 						</li>
 					{% else %}
@@ -61,10 +57,13 @@
 						</li>
 					{% endif %}
 				</ul>
-				<form class="d-flex m" action="{{ path('search') }}">
-					<input class="form-control me-2" name="q" type="search" placeholder="Ex : The mandalorian" aria-label="Search">
-					<button class="btn btn-outline-secondary" type="submit">GO</button>
-				</form>
+				{% if app.user %}
+					<form class="d-flex m" action="{{ path('search') }}">
+						<input class="form-control me-2" name="q" type="search" placeholder="Ex : The mandalorian" aria-label="Search">
+						<button class="btn btn-outline-secondary" type="submit">GO</button>
+					</form>
+				{% endif %}
+
 			</div>
 		</div>
 	</nav>
