Style: Templates/Admin {mise forme les btn ou plulôt mise en rounded-pill}

--- a/templates/admin/category/list.html.twig
+++ b/templates/admin/category/list.html.twig
@@ -22,7 +22,7 @@
 		</div>
 
 		<a href="{{ path('admin_category_add')}}">
-			<button type="button" class="btn btn-outline-success btn-sm">Nouvelle Categories</button>
+			<button type="button" class="btn btn-outline-success btn-sm rounded-pill">Nouvelle Categories</button>
 		</a>
 	</div>
 {% endblock %}
