--- a/templates/admin/characters/list.html.twig
+++ b/templates/admin/characters/list.html.twig
@@ -25,7 +25,7 @@
 			</ul>
 		</div>
 		<a href="{{ path('admin_characters_add') }}">
-			<button type="button" class="btn btn-outline-success btn-sm">Nouveau Personnage</button>
+			<button type="button" class="btn btn-outline-success btn-sm rounded-pill">Nouveau Personnage</button>
 		</a>
 	</div>
 {% endblock %}
