--- a/templates/admin/tvshow/index.html.twig
+++ b/templates/admin/tvshow/index.html.twig
@@ -43,7 +43,7 @@
 			{% endfor %}
 		</ol>
 		<a href="{{ path('admin_tvshow_add') }}">
-			<button type="button" class="btn btn-outline-success btn-sm">Ajouter une Série</button>
+			<button type="button" class="btn btn-outline-success btn-sm rounded-pill">Ajouter une Série</button>
 		</a>
 	</section>
 {% endblock %}
