--- a/templates/admin/tvshow/show.html.twig
+++ b/templates/admin/tvshow/show.html.twig
@@ -35,13 +35,13 @@
 			</div>
 			<div class="row ">
 				<a href="{{ path('admin_tvshow_list')}}" class="py-2">
-					<button type="button" class="btn btn-outline-success btn-sm ">Retour a la liste des series</button>
+					<button type="button" class="btn btn-outline-success btn-sm rounded-pill ">Retour a la liste des series</button>
 				</a>
 				<a href="{{ path('admin_tvshow_edit', {id:tvshow.id}) }}" class="py-2">
-					<button type="button" class="btn btn-outline-primary btn-sm">Editer</button>
+					<button type="button" class="btn btn-outline-primary btn-sm rounded-pill">Editer</button>
 				</a>
 				<a href="{{ path('admin_tvshow_delete', {id:tvshow.id} ) }}" class="py-2">
-					<button type="button" class="btn btn-outline-danger btn-sm">Supprimer</button>
+					<button type="button" class="btn btn-outline-danger btn-sm rounded-pill">Supprimer</button>
 				</a>
 			</div>
 		</div>
