--- a/templates/admin/characters/show.html.twig
+++ b/templates/admin/characters/show.html.twig
@@ -6,9 +6,13 @@
 			<div class="col-lg-6 col-md-8 mx-auto">
 				<h1 class="fw-light">{{character.firstname}}</h1>
 				<p>
-					<a href="{{ path('admin_characters_edit', {id:character.id}) }}">Editer</a>
-					|
-					<a href="{{ path('admin_characters_delete', {id:character.id}) }}">Supprimer</a>
+					<a href="{{ path('admin_characters_edit', {id:character.id}) }}">
+						<button type="button" class="btn btn-outline-info btn-sm rounded-pill">Editer</button>
+					</a>
+
+					<a href="{{ path('admin_characters_delete', {id:character.id}) }}">
+						<button type="button" class="btn btn-outline-danger btn-sm rounded-pill">Supprimer</button>
+					</a>
 
 
 				</p>
@@ -24,7 +28,7 @@
 		<div class="container">
 
 			<a href="{{ path('admin_characters_list') }}" class=" mx-4">
-				<button type="button" class="btn btn-outline-success btn-sm">Liste des Personnage</button>
+				<button type="button" class="btn btn-outline-success btn-sm rounded-pill">Liste des Personnage</button>
 			</a>
 
 		</div>
