--- a/templates/admin/user/show.html.twig
+++ b/templates/admin/user/show.html.twig
@@ -40,12 +40,12 @@
 	<div class="row">
 		<div class="col-auto me-auto">
 			<a href="{{ path('admin_user_list') }}">
-				<button type="button" class="btn btn-outline-secondary btn-sm">Retour à la liste Utilisateurs</button>
+				<button type="button" class="btn btn-outline-secondary btn-sm rounded-pill">Retour à la liste Utilisateurs</button>
 			</a>
 		</div>
 		<div class="col-auto">
 			<a href="{{ path('admin_user_edit', {id:user.id}) }}">
-				<button type="button" class="btn btn-outline-secondary btn-sm">Update</button>
+				<button type="button" class="btn btn-outline-secondary btn-sm rounded-pill">Update</button>
 			</a>
 		</div>
 
